<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/fullName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/nameHint"
                        android:nextFocusDown="@+id/mobileNo"
                        android:padding="5dp"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/mobileNo"
                        android:layout_width="193dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/mobileHint"
                        android:inputType="number"
                        android:nextFocusDown="@+id/designation"
                        android:padding="5dp"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp" >

                    <EditText
                        android:id="@+id/designation"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/designationHint"
                        android:nextFocusDown="@+id/accountNo"
                        android:padding="5dp"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/accountNo"
                        android:layout_width="193dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/accountNoHint"
                        android:inputType="number"
                        android:padding="5dp"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="0dp" >

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="55sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/addButton"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="55sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/resetButton"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="0dp" >

                    <Button
                        android:id="@+id/btnpreview"
                        android:layout_width="55sp"
                        android:layout_height="wrap_content"
                        android:text="@string/previewButton"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/btnCaptureVisit"
                        android:layout_width="55sp"
                        android:layout_height="wrap_content"
                        android:text="@string/captureButton"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="341dp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="5dp"
            android:text="WOXI" />
    </LinearLayout>

</LinearLayout>